Fix deprecated 'new Double' call